<resources>
    <string name="app_name">Movies</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="enter_movie_details">Enter Movie Details</string>
    <string name="title">Title</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="how_many_stars_would_you_rate_this_movie">How many stars would you rate this movie?</string>
    <string name="movie_review_details">Movie Review Details</string>
    <string name="titleLabel">Title</string>
    <string name="genreLabel">Movie Genre</string>
    <string name="rating">Rating</string>
    <string name="film">film</string>
    <string name="delete">Delete</string>
</resources>
